[package]
name = "buscaluso-bench"
version = "0.1.1"
edition = "2021"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nom = "7.1"
unicode-normalization = "0.1.21"
rand = "0.8"
buscaluso = { path = "../buscaluso" }
shadow-rs = "0.16"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["macros", "formatting"] }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1"

[build-dependencies]
shadow-rs = "0.16"
git2 = "0.15"
